--- a/src/components/CardList/CardList.css
+++ b/src/components/CardList/CardList.css
@@ -4,11 +4,12 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
-    margin-top: 20px;
-    max-height: 900px; /* Ajusta según sea necesario */
+    margin-top: 30px;
+    max-height:max-content;
+    justify-content: 'center';
   }
 
 .grid-item {
  
-  max-height:max-content; /* Ajusta según sea necesario */
+  max-height:max-content;
 };
