--- a/src/components/CardProduct/CardProduct.css
+++ b/src/components/CardProduct/CardProduct.css
@@ -1,6 +1,7 @@
 .img{
-
-    max-width: 100%; /* Evita que la imagen sea más grande que su contenedor */
-    display: block; /* Elimina el espacio adicional por debajo de la imagen */
-    margin: 0 auto; 
+    max-width: auto;
+    max-height: 800px;
+    display:flex; 
+    margin: 0; 
+    box-sizing: border-box;
 }
