--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,5 @@
-.ItemListContainer {
+.Footer {
   background: linear-gradient(to bottom, #ffffff, #a6a6a6);
-
   text-align: center;
-  margin-top: auto;
-  flex: 1;
-
 }
+
