--- a/src/components/CartList/CartList.css
+++ b/src/components/CartList/CartList.css
@@ -25,7 +25,7 @@
     display: flex;
     align-items: center;
   }
-  
+
   .img1 {
     width: 100px;
     height: 100px;
@@ -37,6 +37,7 @@
   
   .item-text {
     flex-grow: 1;
+    color: red;
   }
   
   .BotonEliminar {
