mejora de carrusel, footer y grilla

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
-.Footer {
-  background: linear-gradient(to bottom, #ffffff, #a6a6a6);
+.footer {
+  background: linear-gradient(to bottom, #ffffff, #e2e2e2);
   text-align: center;
 }
 
