--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,18 +1,19 @@
-
 .carousel-container {
-    margin: 20px auto;
-    max-width: 90%;
-  }
-  
-  .carousel-container .slick-slide img {
+  width: 100%;
+  height: 300px; 
+  overflow: hidden;
 
-    width: 100%;
-    height: 7cm; 
-    object-fit: cover; 
-    border-radius: 8px;
-  }
-  
-  .carousel-container .slick-dots li button:before {
-    color: #000;
-  }
-  
+}
+
+.imgCarousel {
+width: 100%;
+height: 300px;
+  object-fit: contain; 
+}
+
+
+.slick-slide {
+  display: flex;
+  justify-content: center; 
+  align-items: center;
+}
