--- a/src/components/CartList/CartList.css
+++ b/src/components/CartList/CartList.css
@@ -27,11 +27,12 @@
   }
 
   .img1 {
-    width: 100px;
-    height: 100px;
+    width: auto; 
+    height: 500px; 
     object-fit: contain;
     border-radius: 50%;
     margin-right: 20px;
+    display: flex;
     align-items: center;
   }
   
