--- a/src/components/ItemList/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList/ItemList.css
@@ -1,6 +1,13 @@
 .ItemList {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px; 
-    grid-template-columns: repeat(1, 1fr);
+  display: grid;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 10px;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+@media (max-width: 768px) {
+  .ItemList {
+    grid-template-columns: repeat(1, 1fr); /* Una columna para pantallas pequeñas */
   }
+}
